# seedfinding

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  common.h  mostRavines.c
A Flag on a Mountain/: README.md
A Flag on a Mountain/Ores (Seed)/: (Unfinished) Ores.c  .179-n5n6s.txt  VeinsI.txt
A Flag on a Mountain/Snow (Coordinates)/: (Unfinished) Generalized Snow Brute Forcer.c  Simplex Noise Bounds Finder.c  Snow Brute Forcer.c  Snow Map.xlsx
Algorithm Reversals/: (Unfinished) hashCodeReverse.c  String Hashcode Reverser.py
Backends/: (Unfinished) Example main (MPI).c  Example main (Basic).c  Example main (pthreads).c  README.md
Chunkbiomes/: Bfinders.c  Bfinders.h  Brng.h  README.md  test.c
Emulations/: README.md  endIslands.c
Extreme Climates/: Extreme Climate At Coordinate.c  Extreme Climates.txt  README.md  extremeClimateAtCoord.c  extremeCont.c
Extreme Climates/Archive (b=0.5)/: README.md  maxClimateVolitality.c  maxClimateVolitality2.c  maxNOctaves.c  minClimateVolitality.c  minOctaveDecimalBounds.py
Far Spawns/: README.md
Far Spawns/1.13-1.17/: Forward Checker.c  README.md
Far Spawns/1.18+/: (24w40a 1) Loose Candidates.session  (24w40a 2) Spawn Emulator.c  24w40a First-Stage Continentalness below -0.110125.txt  Perlin Inputs.xlsx  README.md  Seedlist.txt  Spawn Ring Statistics.xlsx
Far Spawns/Beta 1.8-1.12/: Internal State to Seeds.c  README.md  Spawn Test.session
Mushrooms/: Knight & Jereaux's Mushroom Ring Finder.c  Potential Mushroom Spawnpoints (EC=-0.45).session  README.md
Mushrooms/Forward Checker/: Example main (MPI, file).c  Example main (pthreads, stdout).c  README.md  functions.c  globals.h  main_MPI.c  main_multiThreaded.c  settings.h
Oceans/: Only Ocean Biomes within 1800x1800 of Spawn.txt  Only Oceans or Mushroom Fields within 1000x1000 of Origin.txt  README.md
Pybiomes/: README.md  __init__.py  base.py  biomes.py  layers.py  noise.py  pyproject.toml  rng.py
Pybiomes/src/: __init__.py  base.py  biomes.py  finders.py  generator.py  layers.py  noise.py  rng.py
Slime Chunks/: (Unfinished) reverseSlime.c  depthFirstNonSlime.cpp  depthFirstSlime.cpp
Structures/: Least Structures.c
Structures/Stronghold Generation Point Cracker/: (Unfinished) calcs.c  (+1 more)
Templates/: (Unfinished) Example main (MPI).c  Example main (Basic).c  Example main (MPI).c  Example main (pthreads).c  README.md
Utilities/: .gitignore  Climates.c  Climates.h  Fast Climates.h  LICENSE  Math.c  Math.h  README.md  Spawn Lookup Tables.c  Spawn.c  Spawn.h
(+57 files in other folders)
